# vertica-query-analyser

./: .dockerignore  .gitignore  ChangeLog.md  Dockerfile  LICENSE  README.md  stack.yaml  vertica-query-analyser.cabal
.circleci/: config.yml
app/: Main.hs
src/: Analyser.hs  AnalyserServer.hs  AnalysisResult.hs  Catalog.hs  ErrorMsg.hs  Parsing.hs  ServerUtils.hs  Utils.hs
